# HonoursProject

./: .gitignore  README.md  create-env.sh  env.sh  generate_lstm_models.sh  generate_results.py  generate_results.sh  install-packages.sh  packages.txt  pyproject.toml  requirements.txt  setup.sh
bury_models/len1500/: best_model_10_1_len1500.keras  best_model_1_2_len1500.keras  best_model_2_2_len1500.keras  best_model_4_1_len1500.keras  best_model_5_1_len1500.keras  best_model_5_2_len1500.keras  best_model_6_1_len1500.keras  best_model_6_2_len1500.keras  best_model_7_2_len1500.keras  best_model_9_2_len1500.keras
bury_models/len500/: best_model_3_1_len500.keras  best_model_5_1_len500.keras  best_model_5_2_len500.keras  best_model_7_1_len500.keras  best_model_9_1_len500.keras
data/: lisiecki2005-d18o-stack-noaa.csv
data/bury_models/len1500/: best_model_10_2_len1500.keras  best_model_1_1_len1500.keras  best_model_2_1_len1500.keras  best_model_3_1_len1500.keras  best_model_3_2_len1500.keras  (+5 more)
models/: __init__.py  aggregate.py  datasets.py  dlm.py  hmm.py  metrics.py  run.py
models/lstm/: __init__.py  generate.py  test.py  train.py  update.py
src/: __init__.py  build-model.py  datasets.py  hmm.py  lstm.py  main.py  metrics.py  model.py  plots.py  processing.py  results.py  run.py  runner.py  train.sh  util.py  wrapper.py
src/lstm/: __init__.py  generate.py  test.py  train.py  update.py
src/models/: __init__.py  dlm.py  hmm.py  lstm.py  metrics.py
src/training/: compute_lstm.py  lstm.py  model.py  train_lstm.py
training/: generate.py  train.py  util.py
(+242 files in other folders)
