[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "honours-project"
version = "0.1.0"
description = "Honours project code for early-warning signals of tipping points."
requires-python = ">=3.10"
dependencies = [
    "matplotlib==3.10.8",
    "tensorflow[and-cuda]==2.20.0",
    "pandas==2.3.3",
    "scikit-learn==1.8.0",
    "tqdm==4.67.1",
    "joblib==1.5.2",
    "openpyxl==3.1.5",
    "atomics==1.0.3",
    "pycont-lite@git+https://github.com/RhysHolloway/PyCont-Lite.git",
    "ruptures==1.1.10",
    "statsmodels==0.14.6",
]

[tool.setuptools.packages.find]
include = ["models*"]
